# web-scraping

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  constantes.py  credentials.conf  main.py  pyproject.toml  requirements.txt  template.py
scraping/: __main__.py  app.py  settings.py
scraping/src/: html.py  movie.py
src/: email.py  filme.py  movie.py
